# hittracker

./: .gitignore  LICENSE  README.md  pyproject.toml
hittracker/: db.py  db_manager.py  parsers.py  reports.py  tracker.py  utils.py
hittracker/plugins/: __init__.py  asa.py  junos.py  parsers.py
tests/: test.py
tests/05032024/: firewalla.txt  firewallb.txt
tests/08262024/: firewalla.txt  firewallb.txt
