[tool.poetry]
name = "hittracker"
version = "0.1.0"
description = "Firewall Hitcount Analysis Tool"
authors = ["Travis Pickle"]
readme = "README.md"
packages = [
    { include = "hittracker" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
